But fix cards display on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -342,14 +342,16 @@ span {
 }
 @media only screen and (max-width: 800px) {
   .lesson-content {
-    position: relative;
+    position: absolute;
     display: flex;
     flex-direction: column;
     height: 100%;
+    width: 100%;
     justify-content: center;
   }
   .lesson-content .lesson {
-    margin: 60px 40px;
+    height: calc(100% - 50px);
+    width: calc(100% - 80px);
   }
 }
 
@@ -454,9 +456,7 @@ span {
 @media only screen and (max-width: 800px) {
   .card-tilt-L,
   .card-tilt-R {
-    margin: 60px 40px;
-    max-height: -webkit-fill-available;
-    height: 650px;
+    height: calc(100% - 50px);
     width: calc(100% - 80px);
   }
 }
